# mpds-aiida

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conftest.py  install.py  options.yml  options_template.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.json  setup.py
bs_library/: bs_library_2021.pkl  bs_library_2024.pkl
deploy/: aiida_setup.sh  cloud.sh  install.sh  postgresql.conf  supervisord.conf  sysctl.conf  yascheduler.conf
mpds_aiida/: __init__.py  chemical_formulae.py  common.py  export.py  inputs.py  properties.py  quantities.py  spacegroups.py  utils.py
mpds_aiida/calc_templates/: ext_metallic.yml  flapw_default.yml  fleur_default.yml  metallic.yml  minimal.yml  nonmetallic.yml  nonmetallic_test.yml  options_template.yml  production.yml  seebeck_default.yml
mpds_aiida/cli/: __init__.py  main.py
mpds_aiida/tests/: __init__.py  fixtures.py  test_workflow.py
mpds_aiida/tests/mock/: crystal  crystal.py
mpds_aiida/tests/output_files/elastic/: fort.34  fort.9  fort.98
mpds_aiida/tests/output_files/frequency/: crystal.out  fort.9
mpds_aiida/tests/output_files/optimise/: fort.98
mpds_aiida/tests/output_files/properties/: fort.25
mpds_aiida/tests/phonopy_fleur/: tests.py
mpds_aiida/utils/: magmoms.py
mpds_aiida/workflows/: __init__.py  aiida.py  cif.py  crystal.py  crystal_mpds.py  crystal_seebeck.py  fleur_base.py  fleur_mpds.py  fleur_phonopy.py  fleur_seebeck.py  mpds.py  phonopy_fleur.py  properties.py  seebeck_fleur.py
mpds_aiida_workflows/: crystal.py
mpds_aiida_workflows/tests/: fixtures.py  test_workflow.py
mpds_aiida_workflows/tests/mock/: crystal.py
mpds_aiida_workflows/tests/output_files/elastic/: crystal.out
mpds_aiida_workflows/tests/output_files/frequency/: fort.34  fort.98
mpds_aiida_workflows/tests/output_files/optimise/: crystal.out  fort.34  fort.9  fort.98
mpds_aiida_workflows/tests/output_files/properties/: properties.out
openspec/changes/archive/2026-04-22-mpds-opt-seebeck-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-mpds-opt-seebeck-pipeline/specs/crystal-seebeck-pipeline/: spec.md
openspec/specs/crystal-seebeck-pipeline/: spec.md
scripts/: aiida_submit_cif.py  aiida_submit_ext_scheme.py  aiida_submit_ht_test.py  aiida_submit_phase.py  bs_unito_download.py  launch_pproperties.py  restart_workchains.py  run_get_unito_bsl.py  run_properties.py  run_properties_all.py  run_seebeck_pipeline.py  ya_submit_cif.py  ya_submit_ht_test.py
