[build-system]
requires = ["setuptools>=42", "wheel", "reentry"]
build-backend = "setuptools.build_meta"

[project]
name = "mpds-aiida"
version = "0.2.0"
description = "Aiida workflows for MPDS based on CRYSTAL"
authors = [
    { name = "Andrey Sobolev", email = "as@tilde.pro" },
    { name = "Anton Domnin", email = "a.v.daomnin@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: AiiDA"
]
dependencies = [
    "reentry>=1.3.1",
    "six>=1.16.0",
    "numpy>=1.17.5",
    "ase>=3.19",
    "jsonschema<=3.2.0",
    "phonopy==2.19.1",
    "yascheduler >= 1.0.12",
    "aiida-phonopy>=1.2.0",
    "aiida-fleur>=2.0.0",
    "aiida-core>=1.0.1",
    "mpds_client",
    "aiida-reoptimize @ git+https://github.com/mpds-io/aiida-reoptimize",
    "aiida-crystal-dft @ git+https://github.com/tilde-lab/aiida-crystal-dft"
]

[project.optional-dependencies]
dev = [
    "yascheduler @ git+https://github.com/tilde-lab/yascheduler"
]

[project.urls]
Homepage = "https://github.com/mpds-io/mpds-aiida"

[tool.setuptools.packages.find]
where = ["."]
include = ["mpds_aiida*"]

[tool.setuptools.package-data]
"mpds_aiida" = ["calc_templates/*"]

[project.entry-points."aiida.workflows"]
"crystal.mpds" = "mpds_aiida.workflows.mpds:MPDSStructureWorkchain"
"crystal.cif" = "mpds_aiida.workflows.cif:CIFStructureWorkchain"
"crystal.aiida" = "mpds_aiida.workflows.aiida:AiidaStructureWorkchain"
"phonopy.fleur" = "mpds_aiida.workflows.phonopy_fleur:PhonopyFleurWorkChain"
"fleur.forces" = "mpds_aiida.workflows.phonopy_fleur:FleurForcesWorkChain"
"fleur.mpds" = "mpds_aiida.workflows.fleur_mpds:MPDSFleurStructureWorkChain"