[build-system]
requires = ["setuptools>=64", "wheel", "reentry"]
build-backend = "setuptools.build_meta"

[project]
name = "mpds-aiida"
dynamic = ["version"]
description = "AiiDA workflows and utils for the MPDS online ecosystem"
authors = [
    { name = "Andrey Sobolev", email = "as@tilde.pro" },
    { name = "Evgeny Blokhin", email = "eb@tilde.pro" },
    { name = "Anton Domnin", email = "a.v.daomnin@gmail.com" }
    { name = "Alina Zhidkovskaya", email = "alina.zhdk@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: AiiDA"
]
dependencies = [
    "reentry >= 1.3.1",
    "numpy >= 1.17.5",
    "ase >= 3.19",
    "jsonschema <= 3.2.0",
    "phonopy == 2.19.1",
    "yascheduler >= 1.0.12",
    "aiida-phonopy >= 1.2.0",
    "aiida-fleur >= 2.0.0",
    "aiida-core < 2.9.0",
    "aiida_crystal_dft",
    "mpds_client",
    "aiida-reoptimize @ git+https://github.com/mpds-io/aiida-reoptimize"
]

[project.urls]
Homepage = "https://github.com/mpds-io/mpds-aiida"

[tool.setuptools.packages.find]
where = ["."]
include = ["mpds_aiida*"]

[tool.setuptools.package-data]
"mpds_aiida" = ["calc_templates/*"]

[tool.setuptools.cmdclass]
build_py = "install.CustomBuild"

[tool.setuptools.dynamic]
version = {attr = "mpds_aiida.__version__"}

[project.entry-points."aiida.workflows"]
"crystal.mpds" = "mpds_aiida.workflows.crystal_mpds:MPDSStructureWorkchain"
"fleur.mpds" = "mpds_aiida.workflows.fleur_mpds:MPDSFleurStructureWorkChain"
"crystal.cif" = "mpds_aiida.workflows.cif:CIFStructureWorkchain"
"crystal.aiida" = "mpds_aiida.workflows.aiida:AiidaStructureWorkchain"
"phonopy.fleur" = "mpds_aiida.workflows.fleur_phonopy:PhonopyFleurWorkChain"
"fleur.forces" = "mpds_aiida.workflows.fleur_phonopy:FleurForcesWorkChain"
"fleur.dos_seebeck" = "mpds_aiida.workflows.fleur_seebeck.FleurDOSLocalWorkChain"
"crystal.mpds_seebeck" = "mpds_aiida.workflows.crystal_seebeck:MPDSCrystalSeebeckWorkChain"
